--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ dist/
 assets/videos
 
 
+#git commit -m "first commit"
+#git branch -M main
+#git remote add origin https://github.com/jajerrr/pscm-portal-font.git
+#git push -u origin main
