--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "firebase": "^10.12.0",
     "flowbite": "^2.3.0",
     "flowbite-datepicker": "^1.2.6",
+    "gsap": "^3.12.5",
+    "jquery": "^3.7.1",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
