--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.77.2",
     "scss": "^0.2.4",
     "swiper": "^11.1.9",
+    "three": "^0.167.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue-scrollto": "^2.20.0",
@@ -40,5 +41,11 @@
     "nuxt-swiper": "^1.2.2",
     "postcss": "^8.4.38",
     "socket.io-client": "^2.3.0"
-  }
+  },
+  "version": "1.0.0",
+  "description": "Look at the [Nuxt 3 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
