--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@google/model-viewer": "^3.5.0",
     "@nuxt/icon": "^1.0.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
@@ -29,7 +28,6 @@
     "sass": "^1.77.2",
     "scss": "^0.2.4",
     "swiper": "^11.1.9",
-    "three": "^0.167.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue-scrollto": "^2.20.0",
@@ -38,10 +36,12 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@types/socket.io-client": "^3.0.0",
+    "@types/three": "^0.167.1",
     "autoprefixer": "^10.4.19",
     "nuxt-swiper": "^1.2.2",
     "postcss": "^8.4.38",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "three": "^0.146.0"
   },
   "version": "1.0.0",
   "description": "Look at the [Nuxt 3 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.",
