--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.10.0",
     "@vueuse/nuxt": "^10.9.0",
+    "animate.css": "^4.1.1",
     "crypto-js": "^4.2.0",
     "firebase": "^10.12.0",
     "flowbite": "^2.3.0",
     "flowbite-datepicker": "^1.2.6",
     "gsap": "^3.12.5",
+    "intersection-observer": "^0.12.2",
     "jquery": "^3.7.1",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
