--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass": "^1.77.2",
     "scss": "^0.2.4",
     "swiper": "^11.1.9",
+    "tailwindcss": "^3.4.10",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue-scrollto": "^2.20.0",
