--- a/package.json
+++ b/package.json
@@ -23,20 +23,23 @@
     "gsap": "^3.12.5",
     "intersection-observer": "^0.12.2",
     "jquery": "^3.7.1",
+    "locomotive-scroll": "^4.1.4",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "plyr": "^3.7.8",
     "sass": "^1.77.2",
     "scss": "^0.2.4",
-    "swiper": "^11.1.9",
+    "swiper": "^11.1.10",
     "tailwindcss": "^3.4.10",
+    "unenv": "^1.10.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue-scrollto": "^2.20.0",
     "vue3-carousel-nuxt": "^1.1.2"
   },
   "devDependencies": {
+    "@hypernym/nuxt-gsap": "^2.4.3",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@types/socket.io-client": "^3.0.0",
     "@types/three": "^0.167.1",
