--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "intersection-observer": "^0.12.2",
     "jquery": "^3.7.1",
     "locomotive-scroll": "^4.1.4",
-    "nuxt": "^3.11.2",
+    "nuxt": "^3.13.2",
     "nuxt-lazy-load": "^3.0.4",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@hypernym/nuxt-gsap": "^2.4.3",
+    "@nuxt/webpack-builder": "^3.13.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@types/socket.io-client": "^3.0.0",
     "@types/three": "^0.167.1",
@@ -48,7 +49,8 @@
     "nuxt-swiper": "^1.2.2",
     "postcss": "^8.4.38",
     "socket.io-client": "^2.3.0",
-    "three": "^0.146.0"
+    "three": "^0.146.0",
+    "vite": "^5.4.8"
   },
   "version": "1.0.0",
   "description": "Look at the [Nuxt 3 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.",
