--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^10.10.0",
     "@vueuse/nuxt": "^10.9.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "firebase": "^10.12.0",
     "flowbite": "^2.3.0",
