--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "plyr": "^3.7.8",
     "sass": "^1.77.2",
     "scss": "^0.2.4",
-    "swiper": "^11.1.10",
+    "swiper": "^11.1.15",
     "tailwindcss": "^3.4.10",
     "unenv": "^1.10.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue-scrollto": "^2.20.0",
-    "vue3-carousel-nuxt": "^1.1.2"
+    "vue3-carousel-nuxt": "^1.1.2",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@hypernym/nuxt-gsap": "^2.4.3",
