--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apexcharts": "^4.4.0",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "echarts": "^5.6.0",
     "firebase": "^10.12.0",
     "flowbite": "^2.3.0",
     "flowbite-datepicker": "^1.2.6",
@@ -37,6 +38,7 @@
     "tailwindcss": "^3.4.10",
     "unenv": "^1.10.0",
     "vue": "^3.4.27",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.3.2",
     "vue-scrollto": "^2.20.0",
     "vue3-apexcharts": "^1.8.0",
